# Curriculum_Design

./: .clangd  CMakeLists.txt  Curriculum_Design.sln  IncludeFileDependencies1.dgml  README.md  compile_commands
.visuallint/Clang-Tidy/Curriculum_Design/Debug_x64/Curriculum_Design_Curriculum_Design.vcxproj/: account_info_manager.cpp.txt  account_info_manager.cpp.txt.fixes  account_info_manager.cpp_history.xml  admin_AccountInfoReceiver.cpp.txt  admin_AccountInfoReceiver.cpp.txt.fixes  admin_AccountInfoReceiver.cpp_history.xml  admin_interface.cpp.txt  admin_interface.cpp_history.xml  daily_health_check_admin.cpp.txt  daily_health_check_admin.cpp_history.xml  daily_health_check_user.cpp.txt  daily_health_check_user.cpp.txt.fixes  daily_health_check_user.cpp_history.xml  main.cpp.txt  main.cpp.txt.fixes  main.cpp_history.xml  software_information.cpp.txt  software_information.cpp.txt.fixes  (+6 more)
Curriculum_Design/: ClassDiagram.cd  Curriculum_Design.vcxproj  Curriculum_Design.vcxproj.filters  NAT.cpp  NAT.h  NAT_admin.cpp  NAT_admin.h  NAT_user.cpp  NAT_user.h  account.cpp  account.h  account_info_manager.cpp  account_info_manager.h  admin_AccountInfoReceiver.cpp  admin_AccountInfoReceiver.h  admin_interface.cpp  admin_interface.h  daily_health_check.cpp  daily_health_check.h  daily_health_check_admin.cpp  daily_health_check_admin.h  daily_health_check_user.cpp  daily_health_check_user.h  main.cpp  necessary_affairs_manager.cpp  necessary_affairs_manager.h  province_information_manager.cpp  province_information_manager.h  software_information.cpp  software_information.h  time_manager.cpp  time_manager.h  user_AccountInfoReceiver.cpp  user_AccountInfoReceiver.h  user_interface.cpp  user_interface.h
